--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
-    "swiper": "^6.0.4",
+    "swiper": "3.4.2",
     "vue": "^2.6.11",
-    "vue-awesome-swiper": "^4.1.1",
+    "vue-awesome-swiper": "3.1.3",
     "vue-axios": "^2.1.5",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -25,6 +25,7 @@
     "@vue/cli-service": "~4.4.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
+    "better-scroll": "^1.15.2",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
