--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "swiper": "3.4.2",
+    "v-distpicker": "^1.2.7",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "3.1.3",
     "vue-axios": "^2.1.5",
