--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "swiper": "3.4.2",
     "v-distpicker": "^1.2.7",
     "vue": "^2.6.11",
+    "vue-awesome-picker": "^1.1.0",
     "vue-awesome-swiper": "3.1.3",
     "vue-axios": "^2.1.5",
     "vue-lazyload": "^1.3.3",
